# pyOSOAA

./: .coveralls.yml  .gitignore  .travis.yml  README.md  doxygen.config  pyproject.toml  setup.py
casestudy/: Intercomparison between the different atmospheric components.ipynb  pyOSOAA_case_study.ipynb  rs12091445.py
docs/: _config.yml  case.rst  conf.py  index.md  index.rst  install.rst
pyOSOAA/: __init__.py  constants.py  osoaa.py  osoaahelpers.py  outputs.py
test/: LUM_SF.f95  test_osoaa.py
test/OSOAA_RESULTS/: ListParam.txt  config.txt
test/OSOAA_RESULTS/Advanced_outputs/: Flux.txt  MIE_UsedAngles.txt  PM_AER.txt  PM_MLP.txt  PM_PHYTO.txt  PROFILE_ATM.txt  PROFILE_SEA.txt  RAD_UsedAngles.txt  RESLUM_Advanced_DOWN.txt  RESLUM_Advanced_UP.txt
test/OSOAA_RESULTS/Standard_outputs/: RESLUM_vsVZA.txt  RESLUM_vsZ.txt
